fix center alignment and mobile nav bar

--- a/css/main.css
+++ b/css/main.css
@@ -1917,15 +1917,30 @@ h1, h2, h3, h4, h5, h6 {
   #logo {
     margin-left: 20px;
   }
+
+    .desktop-nav-scroll {
+        display: none;
+    }
+
+
+    #header {
+        left: 0;
+        top: 0;
+        right: 0;
+        background: #2F2A29;
+        transition: all 0.5s;
+        border-radius: 0;
+    }
 }
 
+
 #header #logo h1 {
-  font-size: 34px;
-  margin: 0;
-  padding: 0;
-  line-height: 1;
-  font-weight: 700;
-  letter-spacing: 3px;
+    font-size: 34px;
+    margin: 0;
+    padding: 0;
+    line-height: 1;
+    font-weight: 700;
+    letter-spacing: 3px;
 }
 
 #header #logo h1 a, #header #logo h1 a:hover {
